--- a/kms.html
+++ b/kms.html
@@ -1,110 +1,89 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-<title>Gastos de KM · iOS Dark</title>
-<link rel="stylesheet" href="assets/style.css"/>
-<!-- JS libs -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-<!-- Firebase compat -->
-<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  <title>Gastos 2N — KM</title>
+  <link rel="stylesheet" href="assets/style.css"/>
+  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
+  <script src="assets/app.js"></script>
 </head>
-
 <body>
-<header class="topbar">
-  <button class="btn back" onclick="location.href='index.html'"><svg class="icon" viewBox="0 0 24 24" fill="currentColor"><path d="M15 18l-6-6 6-6"/></svg> Volver</button>
-  <h1>Kilometraje</h1>
-  <span class="badge" id="whoami">No autenticado</span>
-</header>
-<main class="wrap">
-  <div class="card">
-    <div class="grid">
-      <div>
-        <label>Fecha</label><input id="kmDate" type="date"/>
-      </div>
-      <div>
-        <label>Destino</label><input id="kmDest" type="text" placeholder="Ej. Bilbao → San Sebastián"/>
-      </div>
-      <div>
-        <label>KM Empresa</label><input id="kmBiz" type="number" min="0" step="0.1"/>
-      </div>
-      <div>
-        <label>KM Personal</label><input id="kmPers" type="number" min="0" step="0.1"/>
-      </div>
-      <div>
-        <label>Precio €/L gasolina</label><input id="kmPrice" type="number" min="0" step="0.01"/>
-      </div>
-      <div>
-        <label>Foto del trayecto o ticket (opcional)</label><input id="kmPhoto" type="file" accept="image/*"/>
-      </div>
+  <header class="topbar">
+    <h1>KM</h1>
+    <a class="btn" href="index.html">Volver</a>
+    <span class="badge" style="margin-left:auto" id="whoami">...</span>
+  </header>
+  <main class="content">
+    <div class="panel grid2">
+      <div class="field"><label>Fecha</label><input id="d" type="date"/></div>
+      <div class="field"><label>Destino</label><input id="dest" type="text" placeholder="Cliente / Ciudad"/></div>
+      <div class="field"><label>KM Empresa</label><input id="kme" type="number" step="0.1" min="0"/></div>
+      <div class="field"><label>KM Personal</label><input id="kmp" type="number" step="0.1" min="0"/></div>
+      <div class="field"><label>€/L gasolina</label><input id="pl" type="number" step="0.01" min="0"/></div>
+      <div class="field"><label>Foto ticket (opcional)</label><input id="ph" type="file" accept="image/*"/></div>
+      <div class="field"><label>Total KM registro</label><input id="kt" type="number" disabled/></div>
+      <div class="field"><label>Coste personal (kmp × €/L)</label><input id="cp" type="number" disabled/></div>
+      <div style="grid-column:1/3;display:flex;gap:8px"><button id="save" class="btn primary">Guardar</button><button id="clr" class="btn">Limpiar</button></div>
     </div>
-    <div class="row" style="margin-top:12px">
-      <div class="small">Total KM coche: <b id="kmTotal">0</b></div>
-      <div class="small">€ personal (kmPers×€/L): <b id="kmEuro">0,00 €</b></div>
-      <button id="saveKM" class="btn primary"><svg class="icon" viewBox="0 0 24 24" fill="currentColor"><path d="M11 2h2v9h9v2h-9v9h-2v-9H2v-2h9V2z"/></svg> Guardar KM</button>
+    <div class="panel">
+      <strong>Últimos registros</strong>
+      <div id="list" class="list"></div>
     </div>
-  </div>
+  </main>
+  <script>
+  (function(){
+    const {auth,db,st}=App; AfterRedirect(); requireAuth(load);
+    function setToday(){ const t=new Date().toISOString().slice(0,10); d.value=t; }
+    function calc(){ kt.value=(Number(kme.value||0)+Number(kmp.value||0)).toFixed(1); cp.value=(Number(kmp.value||0)*Number(pl.value||0)).toFixed(2); }
+    const d=$id('d'), dest=$id('dest'), kme=$id('kme'), kmp=$id('kmp'), pl=$id('pl'), ph=$id('ph'), kt=$id('kt'), cp=$id('cp');
+    [kme,kmp,pl].forEach(i=>i.oninput=calc);
+    function clear(){ dest.value=''; kme.value=''; kmp.value=''; pl.value=''; ph.value=null; calc(); }
+    $id('clr').onclick=clear;
+    setToday(); calc();
 
-  <div class="card" style="margin-top:12px">
-    <h3 class="section-title">Últimos registros</h3>
-    <div id="kmList" class="list"></div>
-  </div>
-</main>
+    async function load(u){
+      // list
+      db.collection(`users/${u.uid}/kms`).orderBy('date','desc').limit(20).onSnapshot(snap=>{
+        const el=$id('list'); el.innerHTML='';
+        snap.forEach(doc=>{
+          const r=doc.data();
+          const div=document.createElement('div'); div.className='card';
+          div.innerHTML=`<img src="${r.photoURL||''}" onerror="this.style.display='none'"/>
+            <div><div><strong>${(r.dest||'-')}</strong> <span class="small">${new Date(r.date).toLocaleDateString('es-ES')}</span></div>
+            <div class="small">Emp:${r.kmEmpresa||0} · Per:${r.kmPersonal||0} · €/L:${r.pricePerLitre||0} · CostePers:${r.costPersonal||0}</div></div>`;
+          el.appendChild(div);
+        });
+      });
+    }
 
-<script>
-window.APP = {"apiKey": "AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs", "authDomain": "gastos-2n.firebaseapp.com", "projectId": "gastos-2n", "storageBucket": "gastos-2n.firebasestorage.app", "messagingSenderId": "55010048795", "appId": "1:55010048795:web:4fb48d1e0f9006ebf7b1be"};
-firebase.initializeApp(APP);
-const auth = firebase.auth();
-const db = firebase.firestore();
-const storage = firebase.storage();
-const provider = new firebase.auth.GoogleAuthProvider();
-function byId(id){return document.getElementById(id);}
-function fmt€(n){return (Number(n)||0).toLocaleString('es-ES',{style:'currency',currency:'EUR'});}
-function alertMsg(t){alert(t);}
-auth.onAuthStateChanged(u=>{ const w=byId('whoami'); if(w) w.textContent = u? (u.email||u.uid) : 'No autenticado'; if(byId('btnLogin')){byId('btnLogin').style.display=u?'none':'inline-flex';} if(byId('btnLogout')){byId('btnLogout').style.display=u?'inline-flex':'none';} });
-</script>
-
-<script>
-byId('kmDate').value = new Date().toISOString().slice(0,10);
-function recalc(){
-  const total = (Number(byId('kmBiz').value)||0) + (Number(byId('kmPers').value)||0);
-  byId('kmTotal').textContent = total.toFixed(1);
-  const euro = (Number(byId('kmPers').value)||0) * (Number(byId('kmPrice').value)||0);
-  byId('kmEuro').textContent = fmt€(euro);
-}
-['kmBiz','kmPers','kmPrice'].forEach(id=> byId(id).addEventListener('input', recalc));
-
-byId('saveKM').onclick = async ()=>{
-  try{ const u=auth.currentUser; if(!u) return alertMsg('Haz login primero');
-    const dateISO = byId('kmDate').value;
-    const dest = byId('kmDest').value.trim();
-    const kmBiz = Number(byId('kmBiz').value)||0;
-    const kmPers = Number(byId('kmPers').value)||0;
-    const price = Number(byId('kmPrice').value)||0;
-    let photoURL='', path='';
-    const f=byId('kmPhoto').files[0];
-    if(f){ const yyyyMM = dateISO.slice(0,7); const filename=`km_${dateISO}_${Date.now()}.jpg`; path=`tickets/${u.uid}/${yyyyMM}/${filename}`; await storage.ref(path).put(f); photoURL = await storage.ref(path).getDownloadURL(); }
-    await db.collection(`users/${u.uid}/kms`).add({
-      date:new Date(dateISO), dest, kmBiz, kmPers, price, totalKm:kmBiz+kmPers, euro: kmPers*price, photoURL, photoPath:path,
-      createdAt: firebase.firestore.FieldValue.serverTimestamp()
-    });
-    alertMsg('KM guardado ✅'); loadKMs();
-  }catch(e){ alertMsg('Error: '+e.message); }
-};
-
-async function loadKMs(){
-  const u=auth.currentUser; if(!u) return;
-  const snap = await db.collection(`users/${u.uid}/kms`).orderBy('date','desc').limit(20).get();
-  const list = byId('kmList'); list.innerHTML='';
-  snap.docs.forEach(d=>{ const x=d.data(); const dte = x.date?.toDate? x.date.toDate(): new Date(x.date); const el=document.createElement('div'); el.className='item'; el.innerHTML=`<img class="thumb" src="${x.photoURL||''}" onerror="this.style.display='none'"/> <div style="flex:1"><div><b>${dte.toLocaleDateString('es-ES')}</b> · ${x.dest||''}</div><div class='small'>KM: ${(x.totalKm||0).toFixed(1)} · € personal: ${fmt€(x.euro||0)}</div></div>`; list.appendChild(el); });
-}
-auth.onAuthStateChanged(()=>loadKMs());
-</script>
-</body></html>
+    $id('save').onclick = async ()=>{
+      try{
+        const u=auth.currentUser; if(!u) return alert('Login primero');
+        const dateISO=d.value||new Date().toISOString().slice(0,10);
+        let photoURL="", photoPath="";
+        const f=ph.files[0];
+        if(f){
+          const fn=`kms_${dateISO}_${Date.now()}_${f.name.split('.').pop()}`;
+          photoPath=`kms/${u.uid}/${dateISO.slice(0,7)}/${fn}`;
+          await st.ref(photoPath).put(f);
+          photoURL=await st.ref(photoPath).getDownloadURL();
+        }
+        const rec={
+          date:new Date(dateISO), dest:dest.value.trim(),
+          kmEmpresa:Number(kme.value||0), kmPersonal:Number(kmp.value||0),
+          pricePerLitre:Number(pl.value||0), totalKm:Number(kme.value||0)+Number(kmp.value||0),
+          costPersonal:Number(kmp.value||0)*Number(pl.value||0),
+          photoURL, photoPath, createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        };
+        await db.collection(`users/${u.uid}/kms`).add(rec);
+        alert('KM guardado ✅'); clear(); setToday();
+      }catch(e){ alert('Error: '+(e.message||e)); }
+    }
+  })();
+  </script>
+</body>
+</html>
